# cairo-rs

./: Cargo.toml  Makefile
.github/workflows/: rust.yml
bench/: criterion_benchmark.rs  iai_benchmark.rs
felt/: Cargo.toml
felt/src/: bigint_felt.rs  lib.rs
src/: cairo_run.rs  lib.rs  math_utils.rs  utils.rs
src/hint_processor/: hint_processor_definition.rs  hint_processor_utils.rs
src/hint_processor/builtin_hint_processor/: blake2s_hash.rs  blake2s_utils.rs  builtin_hint_processor_definition.rs  dict_hint_utils.rs  dict_manager.rs  find_element_hint.rs  hint_utils.rs  keccak_utils.rs  math_utils.rs  memcpy_hint_utils.rs  memset_utils.rs  pow_utils.rs  segments.rs  set.rs  sha256_utils.rs  signature.rs  squash_dict_utils.rs  uint256_utils.rs  usort.rs
src/hint_processor/builtin_hint_processor/cairo_keccak/: keccak_hints.rs
src/serde/: deserialize_program.rs  deserialize_utils.rs
src/tests/: bitwise_test.rs  cairo_run_test.rs  pedersen_test.rs  skip_instruction_test.rs  struct_test.rs
src/types/: exec_scope.rs  layout.rs  program.rs  relocatable.rs
src/types/errors/: program_errors.rs
src/types/instance_definitions/: keccak_instance_def.rs
src/vm/: hooks.rs  security.rs  vm_core.rs
src/vm/context/: run_context.rs
src/vm/decoding/: decoder.rs
src/vm/errors/: hint_errors.rs  memory_errors.rs  runner_errors.rs  trace_errors.rs  vm_errors.rs  vm_exception.rs
src/vm/runners/: cairo_runner.rs
src/vm/trace/: mod.rs  trace_entry.rs
src/vm/vm_memory/: memory.rs  memory_segments.rs
tests/: cairo_run_test.rs
(+13 files in other folders)
