[package]
name = "cairo-felt"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "Field elements representation for the Cairo VM"

# This crate is no_std by default but it cannot work without the alloc crate
[features]
default = ["alloc"]
alloc = []

[dependencies]
num-integer = { version = "0.1.45", default-features = false }
num-bigint = { version = "0.4", features = ["serde"], default-features = false }
num-traits = { version = "0.2.15", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, features = [
    "spin_no_std",
] }
serde = { version = "1.0", features = ["derive"], default-features = false }

[dev-dependencies]
proptest = "1.0.0"
